--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
+    "bcrypt-nodejs": "^0.0.3",
+    "bluebird": "^3.5.0",
     "body-parser": "1.17.2",
     "dotenv": "4.0.0",
     "express": "4.15.3",
     "express-jwt": "5.3.0",
     "jsonwebtoken": "7.4.1",
+    "mongoose": "^4.10.4",
     "prop-types": "15.5.10",
     "react": "15.5.4",
     "react-dom": "15.5.4",
