--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "express": "4.15.3",
     "express-jwt": "5.3.0",
     "jsonwebtoken": "7.4.1",
-    "mongoose": "^4.10.4",
+    "pg": "^6.2.3",
+    "pg-promise": "^5.9.0",
     "prop-types": "15.5.10",
     "react": "15.5.4",
     "react-dom": "15.5.4",
