--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@ build/
 # Logs
 coverage
 npm-debug.log
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
