--- a/.ebextensions/node-settings.config
+++ b/.ebextensions/node-settings.config
@@ -1,4 +1,4 @@
 option_settings:
   aws:elasticbeanstalk:container:nodejs:
     NodeCommand: "npm start"
-    NodeVersion: "8.0.0"
+    NodeVersion: 7.6.0
