--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Keith Alpichi",
   "license": "MIT",
   "scripts": {
-    "start": "NODE_ENV=production node server/index.js",
+    "start": "NODE_ENV=production webpack && node server/index.js",
     "dev-client": "NODE_ENV=development webpack -d --watch",
     "dev-server": "NODE_ENV=development nodemon server/index.js",
     "test": "NODE_ENV=test jest --runInBand --forceExit",
