--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "author": "Keith Alpichi",
   "license": "MIT",
+  "engines": {
+    "node": "8.0.0"
+  },
   "scripts": {
     "start": "NODE_ENV=production node server/index.js",
     "dev-client": "NODE_ENV=development webpack -d --watch",
